--- a/lib/custom-table.css
+++ b/lib/custom-table.css
@@ -140,6 +140,34 @@
     outline: 1px solid #93c5fd;
 }
 
+/* Material Icons alignment within buttons and controls */
+.ctable .material-icons {
+    font-size: 18px;
+    line-height: 1;
+    vertical-align: middle;
+}
+
+.ctable .btn .material-icons + .btn-label {
+    margin-left: 4px;
+}
+
+/* Minimal icon-only buttons */
+.ctable .icon-btn {
+    background: transparent;
+    border: 0;
+    padding: 2px;
+    cursor: pointer;
+    color: inherit;
+}
+.ctable .icon-btn:focus {
+    outline: 2px solid #93c5fd;
+    outline-offset: 2px;
+}
+.ctable .icon-btn.active {
+    outline: 1px solid #93c5fd;
+    border-radius: 4px;
+}
+
 /* Style editor panel */
 .ct-style-panel {
     position: absolute;
